updating my view for admin and customer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,7 @@
-<p>home works!</p>
+
 <ng-progress></ng-progress>
-<app-sign-in></app-sign-in>
-<app-sign-up></app-sign-up>
+<app-navbar></app-navbar>
+<!-- <app-sign-in></app-sign-in>
+<app-sign-up></app-sign-up> -->
+
+
