adding navigation bar

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <ng-progress></ng-progress>
-<app-navbar></app-navbar>
-<!-- <app-sign-in></app-sign-in>
-<app-sign-up></app-sign-up> -->
+
+<app-footer></app-footer>
 
 
+<h1>welcome</h1>
