--- a/src/app/customer/customer/customer.component.html
+++ b/src/app/customer/customer/customer.component.html
@@ -1,4 +1,8 @@
-<p>customer works!</p>
-<h1>hello am new here</h1>
 
-{{username}}
+<body>
+  <h1>hello am new here</h1>
+
+  {{username}}
+  
+</body>
+
