--- a/src/app/navbar/navbar/navbar.component.css
+++ b/src/app/navbar/navbar/navbar.component.css
@@ -12,13 +12,13 @@
 }
 
 .navbar-inverse {
-  background-color: #003300
+  background-color: #4682B4
 }
 
 .navbar-inverse .navbar-nav>.active>a:hover,
 .navbar-inverse .navbar-nav>li>a:hover,
 .navbar-inverse .navbar-nav>li>a:focus {
-  background-color: #002200
+  background-color: #4682B4
 }
 
 .navbar-inverse .navbar-nav>.active>a,
@@ -28,11 +28,11 @@
 .navbar-inverse .navbar-nav>.open>a,
 .navbar-inverse .navbar-nav>.open>a:hover,
 .navbar-inverse .navbar-nav>.open>a:focus {
-  background-color: #003300
+  background-color: #4682B4
 }
 
 .dropdown-menu {
-  background-color: #006B00
+  background-color: 0#4682B4
 }
 
 .dropdown-menu>li>a:hover,
@@ -119,4 +119,13 @@
 }
 .dropdown:hover .dropdown-menu {
   display: block;
+}
+.box{
+  width:100%;
+  height: 50px;
+
+}
+
+.navbar-fixed-top, .navbar-fixed-bottom {
+  position: relative;
 }
