--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -1,27 +1,33 @@
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
   <div class="container">
     <div class="navbar-header">
+      <a href="/"><img  src="././assets/photo/wifi.jpeg" class= "box"></a>
+
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+
       </button>
-      <a href="./" class="navbar-brand">Kinetik Network</a>
+
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#">Home</a>
+
+
         </li>
 
         <li class="dropdown">
-          <a class="dropbtn">About <b class="caret"></b></a>
+          <a href="#">
+            Home</a>
+          <!-- <a class="dropbtn">About <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="#">Mission</a></li>
             <li><a href="#">Vision</a></li>
             <li><a href="#">Careers</a></li>
-          </ul>
+          </ul> -->
         </li>
         <li>
           <a href="#">Products</a>
@@ -29,16 +35,15 @@
         <li>
           <a href="#">Services</a>
         </li>
-        <li class="active">
-          <a href="#">Contact</a>
+        <li>
+          <a href="/contact">Contact</a>
         </li>
-        <li class="active">
-          <a href="signin">Login</a>
+        <li>
+          <a href="/signin">Login</a>
         </li>
-        <li class="active">
-          <a href="signup">SignUp</a>
+        <li>
+          <a href="/signup">Register</a>
         </li>
-
       </ul>
     </nav>
   </div>
