adding content to homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,19 @@
 <app-footer></app-footer>
 
 
-<h1>welcome</h1>
+<div class="container-fluid" >
+  <div class = "row">
+    <br><br><br>
+    <div class ="col-md-6"> <img  src="././assets/photo/img1.jpg" class= "responsive"></div>
+    <div class ="col-md-6">
+      <h1><b>KINETIK INTERNET</b></h1>
+      <H1><b><i>Internet Everywhere</i></b></H1>
+      <br><br><br>
+      <h4> <a href="signup">Join Us</a> today to enjoy the best Internet connectivity for your home and business countrywide </h4>
+    </div>
+  </div>
+</div>
+
+<div class ="container-fluid">
+  
+</div>
