--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
   <div class="container">
     <div class="navbar-header">
-      <a href="/"><img  src="././assets/photo/wifi.jpeg" class= "box"></a>
+      <a href=""><img  src="././assets/photo/wifi.jpeg" class= "box"></a>
 
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -22,12 +22,7 @@
         <li class="dropdown">
           <a href="#">
             Home</a>
-          <!-- <a class="dropbtn">About <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Mission</a></li>
-            <li><a href="#">Vision</a></li>
-            <li><a href="#">Careers</a></li>
-          </ul> -->
+         
         </li>
         <li>
           <a href="#">Products</a>
