--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,11 @@
 
 <ng-progress></ng-progress>
 
-<app-footer></app-footer>
-
-
 <div class="container-fluid" >
   <div class = "row">
     <br><br><br>
-    <div class ="col-md-6"> <img  src="././assets/photo/img1.jpg" class= "responsive"></div>
+    <div class = "col-md-1"></div>
+    <div class ="col-md-5"> <img  src="././assets/photo/img1.jpg" class= "responsive"></div>
     <div class ="col-md-6">
       <h1><b>KINETIK INTERNET</b></h1>
       <H1><b><i>Internet Everywhere</i></b></H1>
@@ -16,7 +14,41 @@
     </div>
   </div>
 </div>
-
-<div class ="container-fluid">
-  
+ <br><br><br><br>
+<div class ="container">
+  <div class = "row">
+    <div class="col-md-3">
+      <div class="panel panel-success">
+        <div class="panel-heading"><img  src="././assets/photo/stream.jpg" class="stream"></div>
+        <div class="panel-body"><h4>Streaming</h4>
+        <p>With Fast and Reliable Network Streaming from diffrent platforms with ease for the best video experience</p></div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-success">
+        <div class="panel-heading"><img  src="././assets/photo/social.jpg" class="social"></div>
+        <div class="panel-body"><h4>Social Networking</h4><br>
+        <p>With high reliable internet you can connect with friends and Family all around the Globe </p></div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="panel panel-success">
+        <div class="panel-heading"><img  src="././assets/photo/virtual.jpeg" class="virtual"></div>
+        <div class="panel-body"><h4>Virtual Working</h4><br>
+        <p>With Good speed network which are highly reliable be sure to work remotely in ease</p></div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div  class="panel panel-success">
+        <div class="panel-heading"><img  src="././assets/photo/gaming.jpg" class="gaming"></div>
+        <div class="panel-body"><h4>Online Gaming</h4>
+          <br><br>
+        <p>Stream online games with no drag and faster response</p></div>
+      </div>
+    </div>
+  </div>
 </div>
+<br><br><br><br>
+<h1 class="pkg">OUR PACKAGES</h1> 
+<br><br>
+<app-homes></app-homes>
