start of deployment

--- a/src/app/bundle/homes/homes.component.html
+++ b/src/app/bundle/homes/homes.component.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class ="col-md-3">
       <div class="panel panel-primary">
-        <div class="panel-heading"><h2>BRONZE</h2></div>
+        <div class="panel-heading"><h2 class="text-center">BRONZE</h2></div>
         <div class="panel-body">
             <h1>3</h1><h6>MBPS</h6>
             <br><br><br>
@@ -22,7 +22,7 @@
     </div>
     <div class ="col-md-3">
       <div class="panel panel-success">
-        <div class="panel-heading"><h2>SILVER</h2></div>
+        <div class="panel-heading"><h2 class="text-center">SILVER</h2></div>
         <div class="panel-body">
           <h1>4</h1><h6>MBPS</h6>
           <br><br><br>
@@ -39,7 +39,7 @@
     </div>
     <div class ="col-md-3">
       <div class="panel panel-warning">
-        <div class="panel-heading"><h2>GOLD</h2></div>
+        <div class="panel-heading"><h2 class="text-center">GOLD</h2></div>
         <div class="panel-body">
           <h1>5</h1><h6>MBPS</h6>
           <br><br><br>
@@ -56,7 +56,7 @@
     </div>
     <div class ="col-md-3">
       <div class="panel panel-danger">
-        <div class="panel-heading"><h2>DIAMOND</h2></div>
+        <div class="panel-heading"><h2 class="text-center">DIAMOND</h2></div>
         <div class="panel-body">
           <h1>6</h1><h6>MBPS</h6>
           <br><br><br>
