--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,9 @@
 
-<ng-progress></ng-progress>
 
-<div class="container-fluid" >
+<body>
+<ng-progress></ng-progress>
+<div class="container">
+<div class="container">
   <div class = "row">
     <br><br><br>
     <div class = "col-md-1"></div>
@@ -52,3 +54,5 @@
 <h1 class="pkg">OUR PACKAGES</h1> 
 <br><br>
 <app-homes></app-homes>
+</div>
+</body>
