--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <ng-progress></ng-progress>
-<app-navbar></app-navbar>
+<div class="container"><app-navbar></app-navbar></div>
+
 <router-outlet></router-outlet>
 <app-footer></app-footer>
