--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
   <div class="container">
     <div class="navbar-header">
@@ -43,3 +44,4 @@
     </nav>
   </div>
 </header>
+</div>
