--- a/src/app/admin/admin/admin.component.html
+++ b/src/app/admin/admin/admin.component.html
@@ -1,3 +1,24 @@
 
 
-{{username}}
+hello admin {{username}} welcome to your dashboard
+
+<div >
+
+  <table style="overflow-x:auto;">
+   
+    <tr>
+
+      <th>Username</th>
+      <th>Email</th>
+      <th>Role</th>
+    </tr>
+    <tr *ngFor='let user of allUsers' >
+
+      <td>{{user.username}}</td>
+      <td>{{user.email}}</td>
+      <td>{{user.role}}</td>
+    </tr>
+  </table>
+</div>
+
+
