--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <ng-progress></ng-progress>
-<div class="container"><app-navbar></app-navbar></div>
+<app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer></app-footer>   
