--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,8 @@
 
 <body>
 <ng-progress></ng-progress>
-<div class="container">
-<div class="container">
+<div class="container-fluid">
+<div class="container-fluid">
   <div class = "row">
     <br><br><br>
     <div class = "col-md-1"></div>
@@ -51,8 +51,62 @@
   </div>
 </div>
 <br><br><br><br>
-<h1 class="pkg">OUR PACKAGES</h1> 
+<h1 class="pkg">OUR PACKAGES</h1>
 <br><br>
-<app-homes></app-homes>
+<!--
+<app-business></app-business> -->
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong" id="btn1">
+ HOME PACKAGE
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">HOME PACKAGE</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-homes></app-homes>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">&#10060;</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
 </div>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="btn2" >
+  BUSINESS PACKAGE
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">BUSINESS PACKAGE</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-business></app-business>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">&#10060;</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
 </body>
