--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container-fluid">
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
-  <div class="container">
+  <div class="container-fluid">
     <div class="navbar-header">
       <a href=""><img  src="././assets/photo/wifi.jpeg" class= "box"></a>
 
