--- a/src/app/navbar/navbar/navbar.component.html
+++ b/src/app/navbar/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href=""><img  src="././assets/photo/wifi.jpeg" class= "box"></a>
+      <a href=""><img  src="././assets/photo/logo_size.jpg" class= "box"></a>
 
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
@@ -23,7 +23,7 @@
         <li class="dropdown">
           <a href="#">
             Home</a>
-         
+
         </li>
         <li>
           <a href="#">Products</a>
