--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,21 +2,26 @@
 
 <body>
 <ng-progress></ng-progress>
+<br><br><br>
+<div  id="overlay">
+  <img  src="././assets/photo/isp.jpg" class="snow" alt="Snow" style="width:100%;">
+  <div class="centered">
+    <h1><b>KINETIK INTERNET</b></h1>
+    <H1><b><i>Internet Everywhere</i></b></H1>
+    <br><br><br>
+    <h4> <a href="signup">Join Us</a> today to enjoy the best Internet connectivity for your home and business countrywide </h4>
+  </div>
+</div>
 <div class="container-fluid">
 <div class="container-fluid">
   <div class = "row">
-    <br><br><br>
-    <div class = "col-md-1"></div>
-    <div class ="col-md-5"> <img  src="././assets/photo/img1.jpg" class= "responsive"></div>
-    <div class ="col-md-6">
-      <h1><b>KINETIK INTERNET</b></h1>
-      <H1><b><i>Internet Everywhere</i></b></H1>
-      <br><br><br>
-      <h4> <a href="signup">Join Us</a> today to enjoy the best Internet connectivity for your home and business countrywide </h4>
-    </div>
+
+
   </div>
 </div>
  <br><br><br><br>
+ <div  id="what">
+   <br><br>
 <div class ="container">
   <div class = "row">
     <div class="col-md-3">
@@ -50,6 +55,7 @@
     </div>
   </div>
 </div>
+</div>
 <br><br><br><br>
 <h1 class="pkg">OUR PACKAGES</h1>
 <br><br>
@@ -60,7 +66,7 @@
  HOME PACKAGE
 </button>
 
-<!-- Modal -->
+
 <div class="modal fade" id="exampleModalLong" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -81,12 +87,11 @@
     </div>
   </div>
 </div>
-<!-- Button trigger modal -->
+
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="btn2" >
   BUSINESS PACKAGE
 </button>
 
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -108,5 +113,9 @@
   </div>
 </div>
 </div>
+
+<br><br>
+
+
 
 </body>
