adding updated code

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -56,66 +56,19 @@
   </div>
 </div>
 </div>
-<br><br><br><br>
+<br><br>
 <h1 class="pkg">OUR PACKAGES</h1>
-<br><br>
-<!--
-<app-business></app-business> -->
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong" id="btn1">
- HOME PACKAGE
-</button>
+<br>
+
+<br>
 
 
-<div class="modal fade" id="exampleModalLong" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">HOME PACKAGE</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <app-homes></app-homes>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">&#10060;</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"></button>
-      </div>
+<div>
+  <div class ="row">
+    <div class = col-md-6>
+      
     </div>
+    <div class = col-md-6></div>
   </div>
 </div>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="btn2" >
-  BUSINESS PACKAGE
-</button>
-
-<div class="modal fade" id="exampleModal" tabindex="2" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">BUSINESS PACKAGE</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <app-business></app-business>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">&#10060;</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal"></button>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-
-<br><br>
-
-
-
-</body>
