--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
  <br><br><br><br>
  <div  id="what">
    <br><br>
-<div class ="container">
+<div class ="container-fluid">
   <div class = "row">
     <div class="col-md-3">
       <div class="panel panel-success">
@@ -65,10 +65,20 @@
 
 <div>
   <div class ="row">
-    <div class = col-md-6>
-      
+    <div class = col-md-6 id=nn>
+      <div class=""><img  src="././assets/photo/home.png" class="wow" ></div>
+      <h3 class='text-center'>UNLIMITED HOME PACKAGES</h3>
+      <br><br>
+          <H4 class="text-center"><b>From As Low As Ksh.1000</b></H4>
+          <h4 class="text-center">Get Unlimited Data to browse, Stream, With Minimum Downtime ,No caps, No Limit  </h4>
+         
     </div>
-    <div class = col-md-6></div>
+    <div class = col-md-6 id=yy>
+      <h3 class='text-center'>UNLIMITED HOME PACKAGES</h3>
+      <br><br>
+          <H4 class="text-center"><b>From As Low As Ksh.1000</b></H4>
+          <h4 class="text-center">Get Unlimited Data to browse, Stream, With Minimum Downtime ,No caps, No Limit  </h4>
+    </div>
   </div>
 </div>
-
+<button mat-button color="primary">Primary</button>
